tests/NormalTests/paczka1/fuzzy1/18177238.err
Error in line 1: GpMiHF11 A4N7 95,6
Error in line 22: qizd A407 40,4
Error in line 23: qizd A484 49,4
Error in line 36: A407 A876 46,3
Error in line 35: ZGNn4SRazr A484 54,9
Error in line 37: A407 A864 32,5
